import java.lang.management.ManagementFactory

plugins {
    id 'java'
    id 'io.quarkus'
    id 'idea'
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-resteasy'
    implementation "com.jq:jq-truffle:1.0"
    implementation group: 'io.quarkus', name: 'quarkus-resteasy-jsonb', version: '1.12.2.Final'
    implementation "org.graalvm.sdk:graal-sdk:21.0.0.2"

    testImplementation 'org.assertj:assertj-core:3.19.0'
    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'io.rest-assured:rest-assured'
}

group 'com.matt'
version '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

tasks.withType(io.quarkus.gradle.tasks.QuarkusDev) {
    jvmArgs = ["-ea", "--add-exports","org.graalvm.sdk/org.graalvm.polyglot.impl=ALL-UNNAMED"]
}
test {
    jvmArgs '-ea',
            '--add-exports',
            'org.graalvm.sdk/org.graalvm.polyglot.impl=ALL-UNNAMED'

    useJUnitPlatform()
    testLogging {
        showStandardStreams true
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}
